style: ui design completed

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,10 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Advice Generator | API Based</title>
 
-    <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="stylesheet" href="./assets/css/main.css" />
   </head>
-  <body class="font-Sen">
-    <h1>Hello World</h1>
-    <link rel="stylesheet" href="./assets/js/main.js">
+  <body class="font-Sen bg-gradient-to-r from-[#112D4E] to-[#3F72AF]">
+    <div class="bg-[#DBE2EF] w-[600px] rounded-md p-5 mx-auto mt-40">
+      <p class="text-[#112D4E] font-semibold text-justify">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione
+        quisquam illum laborum magni nesciunt ipsum, beatae, mollitia deserunt
+        necessitatibus voluptate saepe dolor. Amet, ipsa! Cumque natus sed quasi
+        voluptatem consequatur.
+      </p>
+
+      <button class="bg-[#112D4E] px-5 py-2 rounded-md text-[#DBE2EF] mt-5">Get New Advice! </button>
+    </div>
+    <link rel="stylesheet" href="./assets/js/main.js" />
   </body>
 </html>
